# smil

./: CMakeLists.txt  Doxyfile  README.md  smil.c
docs/html/: annotated.html  annotated_dup.js  classes.html  doxygen_crawl.html  files.html  files_dup.js  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  index.html  lwipopts_8h.html  lwipopts_8h.js  lwipopts_8h_source.html  navtreedata.js  navtreeindex0.js  smil_8c.html  smil_8c.js  struct_sistema_lixeira-members.html  struct_sistema_lixeira.html  struct_sistema_lixeira.js
docs/html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_e.js  all_f.js  classes_0.js  defines_0.js  defines_1.js  defines_3.js  defines_4.js  defines_6.js  defines_b.js  files_1.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js
docs/latex/: annotated.tex  files.tex  lwipopts_8h.tex  lwipopts_8h_source.tex  refman.tex  smil_8c.tex  struct_sistema_lixeira.tex
libs/RP2040-WS2812B-Animation/: ws2812b_animation.c  ws2812b_animation.h
pico-ssd1306/: CMakeLists.txt  cmake_install.cmake  ws2812.pio.h
